# Macdonalds-Parser

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: products.py
src/parser/: data.json  parser.py
src/schemas/: products.py
