[tool.poetry]
name = "macdonalds-parser"
version = "0.1.0"
description = ""
authors = ["Andrii Zabolotin <fenics7511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
playwright = "^1.46.0"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
